--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@phosphor-icons/react": "^2.1.10",
     "clsx": "^2.1.1",
     "convex": "^1.31.7",
+    "handlebars": "^4.7.8",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-router-dom": "^7.13.0",
@@ -33,6 +34,7 @@
     "@testing-library/jest-dom": "^6.9.1",
     "@testing-library/react": "^16.3.2",
     "@testing-library/user-event": "^14.6.1",
+    "@types/handlebars": "^4.0.40",
     "@types/node": "^24.10.1",
     "@types/react": "^19.2.7",
     "@types/react-dom": "^19.2.3",
